--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,20 @@
 <div class="container">
-  <div class="row">
+  <div class="row justify-content-md-center">
     <div style="align-content:center;">
       <form>
-          <div class="form-group">
+        <div class="form-group">
+          <label for="exampleInputEmail1">Name</label>
+          <input type="text" class="form-control" id="name" placeholder="Enter Name">
+        </div>
+
+        <div class="form-group">
+          <label for="exampleInputEmail1">Contact Number</label>
+          <input type="text" class="form-control" id="mobile" placeholder="Enter Contact" oninput="this.value = this.value.replace(/[^0-9.]/g, ''); this.value = this.value.replace(/(\..*)\./g, '$1');" maxlength="10">
+        </div>        
+
+         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-           
           </div>
           <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
